BE: RBAC classes refactoring (#116)
Co-authored-by: iliax <ilya.kuramshin@almatech.dev>